@@ -161,6 +161,26 @@ public class TestMultiFieldQueryParser extends LuceneTestCase {
     q = mfqp.parse("\"one two\"~2");
     assertEquals("(b:\"one two\"~2)^5.0 (t:\"one two\"~2)^10.0", q.toString());
 
+    // check boost with fuzzy
+    q = mfqp.parse("one~");
+    assertEquals("(b:one~2)^5.0 (t:one~2)^10.0", q.toString());
+
+    // check boost with prefix
+    q = mfqp.parse("one*");
+    assertEquals("(b:one*)^5.0 (t:one*)^10.0", q.toString());
+
+    // check boost with wildcard
+    q = mfqp.parse("o?n*e");
+    assertEquals("(b:o?n*e)^5.0 (t:o?n*e)^10.0", q.toString());
+
+    // check boost with regex
+    q = mfqp.parse("/[a-z][123]/");
+    assertEquals("(b:/[a-z][123]/)^5.0 (t:/[a-z][123]/)^10.0", q.toString());
+
+    // check boost with range
+    q = mfqp.parse("[one TO two]");
+    assertEquals("(b:[one TO two])^5.0 (t:[one TO two])^10.0", q.toString());
+
     q = mfqp.parse("one^3 AND two^4");
     assertEquals("+((b:one)^5.0 (t:one)^10.0)^3.0 +((b:two)^5.0 (t:two)^10.0)^4.0", q.toString());
   }
